--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "frontend": "parcel serve src/index.html --open"
   },
   "devDependencies": {
-    "@koa/cors": "^5.0.0",
+    "@koa/cors": "5.0.0",
     "@types/koa": "2.13.12",
     "@types/koa-bodyparser": "4.3.12",
     "@types/koa-router": "7.4.8",
     "@types/koa-static": "4.0.4",
-    "@types/koa__cors": "^5.0.0",
+    "@types/koa__cors": "5.0.0",
     "@types/mime-types": "2.1.4",
     "koa-static": "5.0.0",
     "parcel": "2.10.3",
